# colorer

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo_test.yml  release.yml
.rpm/: clrr.spec  colorer.spec
colorer_patterns/: df.toml  dig.toml  docker.toml  env.toml  free.toml  lastb.toml  ls.toml  lsns.toml  nmap.toml  nslookup.toml  ping.toml
man/: clrr.1.md
src/: cli_args.rs  main.rs
src/core/: decorator.rs  mod.rs  parser.rs
src/core/command/: df.rs  dig.rs  docker.rs  env.rs  free.rs  last.rs  ls.rs  lsns.rs  mod.rs  nmap.rs  nslookup.rs  ping.rs
src/parser/: parser.rs
src/parser/command/: df.rs  dig.rs  docker.rs  env.rs  free.rs  last.rs  ls.rs  lsns.rs  mod.rs  nmap.rs  nslookup.rs  ping.rs
